// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsHeader renders as expected 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: inset 0px -2px 0px 0px #E5EAEC;
  cursor: pointer;
  list-style: none;
  margin: 0 0 10px;
  padding: 0;
}

<ul
  className="c0"
/>
`;

exports[`TabsHeader when align prop is set to right applies proper styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: inset 0px -2px 0px 0px #E5EAEC;
  cursor: pointer;
  list-style: none;
  margin: 0 0 10px;
  padding: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  text-align: right;
}

<ul
  className="c0"
/>
`;

exports[`TabsHeader when in classic style renders as expected 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: inset 0px -2px 0px 0px #E5EAEC;
  cursor: pointer;
  list-style: none;
  margin: 0 0 10px;
  padding: 0;
  box-shadow: inset 0px -2px 0px 0px #ccd6db;
}

<ul
  className="c0"
/>
`;

exports[`TabsHeader when position prop is set to left applies proper styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: inset 0px -2px 0px 0px #E5EAEC;
  cursor: pointer;
  list-style: none;
  margin: 0 0 10px;
  padding: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: inset -2px 0px 0px 0px #E5EAEC;
  width: 20%;
  margin: 0 10px 0;
}

<ul
  className="c0"
/>
`;
